# django-setup-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tasks.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build.yml  changelog.yml  dependencies.yml  on-release-main.yml  tests.yml
django_setup_tools/: apps.py  scripts.py
django_setup_tools/management/commands/: setup.py
src/django_setup_tools/: scripts.py
src/django_setup_tools/management/commands/: setup.py
tests/: __init__.py  conftest.py  settings.py  test_integration.py  test_scripts.py  test_setup_command.py  test_setup_command_extended.py  test_utility_scripts.py
